--- a/client/src/components/Projects/ProjectNavbar/ProjectNav.css
+++ b/client/src/components/Projects/ProjectNavbar/ProjectNav.css
@@ -10,14 +10,24 @@
     
 }
 
-
+.project-sidebar2{
+    background: #f0f0f0;
+    /* width: 12rem; */
+    position: absolute;
+    height: 80vh;
+    overflow-y: scroll;
+    box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+    border-right: 0.05em solid #00000008;
+    
+}
 
 .all-top {
     background-color: inherit;
     position: sticky;
     top: 0;
-    box-shadow: 0em 0em 0.1em 0.1em rgb(0 0 0 / 0.05);
+    box-shadow: 0em 0em 0.em 0.1em rgb(0 0 0 / 0.05);
     padding-bottom: 0.5em;
+    margin-top: 2em;
 
 }
 
