--- a/client/src/components/Projects/ProjectNavbar/NavBack.css
+++ b/client/src/components/Projects/ProjectNavbar/NavBack.css
@@ -2,12 +2,12 @@
 .project-sidebar{
     background: #f0f0f0;
     /* width: 12rem; */
-    position: absolute;
+    position: fixed;
     height: 100vh;
     overflow-y: scroll;
     box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
     border-right: 0.05em solid #00000008;
-    
+    z-index: 5;
 }
 
 .project-sidebar2{
