--- a/client/src/components/Projects/Sprints/Create/Datepicker.scss
+++ b/client/src/components/Projects/Sprints/Create/Datepicker.scss
@@ -13,10 +13,11 @@ $datepicker__muted-color: #ccc !default;
 .react-datepicker__input-container input {
     width: 12em;
     background-color: #dbdbdb;
-    font-weight: 300;
+    font-weight: normal;
     padding: 0.2em;
     border-radius: 0.5rem;
-    color: #505050;
+    color: #303030;
+    font-size: 0.9em;
     outline: none;
     
 }
@@ -77,7 +78,7 @@ $datepicker__muted-color: #ccc !default;
     color: #707070  !important;
     margin-top: 0.75em !important;
     margin-bottom: -0.75em !important;
-    font-weight: 300;
+    font-weight: normal;
     
 }
 
@@ -87,7 +88,7 @@ $datepicker__muted-color: #ccc !default;
 .react-datepicker__quarter-text,
 .react-datepicker__year-text {
   cursor: pointer;
-  font-weight: 300;
+  font-weight: normal;
 
     &--in-range:not(
         &--selecting-range-start, 
