--- a/client/src/components/Navbar/Nav.css
+++ b/client/src/components/Navbar/Nav.css
@@ -6,6 +6,7 @@
     background: #202122;
     width: 12rem;
     position: fixed;
+    top: 0;
     height: 100%;
     transition: all 0.3s;
     color: #e2e2e2;
