--- a/client/src/components/Projects/ProjectNavbar/NavBack.css
+++ b/client/src/components/Projects/ProjectNavbar/NavBack.css
@@ -3,6 +3,7 @@
     background: #f0f0f0;
     /* width: 12rem; */
     position: fixed;
+    top: 0;
     height: 100vh;
     overflow-y: scroll;
     box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
