--- a/client/src/components/Projects/ProjectNavbar/NavBack.css
+++ b/client/src/components/Projects/ProjectNavbar/NavBack.css
@@ -9,6 +9,7 @@
     box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
     border-right: 0.05em solid #00000008;
     z-index: 5;
+    will-change: width;
 }
 
 .project-sidebar2{
