--- a/client/src/components/Projects/ProjectNavbar/ProjectNav.css
+++ b/client/src/components/Projects/ProjectNavbar/ProjectNav.css
@@ -8,6 +8,7 @@
     overflow-y: scroll;
     box-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
     border-right: 0.05em solid #00000008;
+    will-change: width;
 }
 
 .project-sidebar2{
